k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jibby
spec:
  serviceName: jibby
  selector:
    matchLabels:
      app: jibby
  template:
    metadata:
      labels:
        app: jibby
    spec:
      containers:
        - name: jibby
          image: gcr.io/proto-client-ttf-832500/micro-jibby:0.2 #TODO: Make dynamic
          ports:
            - containerPort: 8080
