k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jibby-service
spec:
  selector:
    app: jibby
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
