k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jibby-ingress
  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  rules:
  - host: jibby.terasology.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  jibby-service
            port:
              number: 80
  tls:
  - hosts:
    - jibby.terasology.io
    secretName: jibby-server-secret
